teacher can distinguish between correct and incorrect answers when viewing a survey reply

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -247,6 +247,14 @@ es:
         header: Entrega de tarea
         delivered: Entrega
         comment: Comentar entrega
+    survey_replies:
+      fields:
+        correct: Respuesta correcta
+        incorrect: Respuesta incorrecta
+
+  survey_reply:
+    score: Calificación del cuestionario
+    updated: Última edición
 
   teachers:
     deliveries:
