al publicar un cuestionario hay retroalimentación

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -223,6 +223,7 @@ es:
       description: Descripción
       answer: Contestar
       publish: Publicar
+      published: Publicado
     index:
       header: Cuestionarios
       new_survey: Nuevo cuestionario
