Como usuario y maestro veo diseño correcto en cuestionarios [23328959] https://www.pivotaltracker.com/story/show/23328959

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -226,6 +226,7 @@ es:
       answer: Contestar
       publish: Publicar
       published: Publicado
+    drag: Arrastrar y Ordena
     index:
       header: Cuestionarios
       new_survey: Nuevo cuestionario
