Fixes a spelling mistake

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -226,7 +226,7 @@ es:
       answer: Contestar
       publish: Publicar
       published: Publicado
-    drag: Arrastrar y Ordena
+    drag: Arrastra y Ordena
     index:
       header: Cuestionarios
       new_survey: Nuevo cuestionario
