Survey form period input now with select field

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -121,6 +121,7 @@ es:
       create_and_publish: Crear y publicar
       edit: Editar
       delete: Eliminar
+      select_one: Seleccione uno 
 
   shared:
     toolbar:
