Como usuario y maestro veo diseño correcto en cuestionarios [23328959] FIXES: https://www.pivotaltracker.com/story/show/23328959

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -260,7 +260,7 @@ es:
       add_answer: Añadir respuesta
     question_fields:
       legend: Preguntas para cuestionario 
-      add_question: Añadir pregunta
+      add_question: + Añadir pregunta
 
 
   students:
