changed mails for the bulk creation of ese

--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -27,6 +27,7 @@ es:
       updated: 'Tu contraseña fue cambiada exitosamente y has sido ingresado al sistema.'
       updated_not_active: 'Tu contraseña se cambió exitosamente.'
       send_paranoid_instructions: "Si tu correo electrónico existe en nuestra base de datos, recibirás un enlace para reiniciar tu contraseña en unos minutos."
+      change_password: 'Actualiza tu contraseña'
     confirmations:
       send_instructions: 'Recibirás un correo electrónico con instrucciones sobre cómo confirmar tu cuenta en unos minutos.'
       send_paranoid_instructions: 'Si tu correo electrónico existe en nuestra base de datos, recibirás un correo con instrucciones sobre cómo confirmar tu cuenta en unos minutos.'
@@ -49,7 +50,7 @@ es:
       failure: 'No te pudimos autorizar en %{kind} debido a "%{reason}".'
     mailer:
       confirmation_instructions:
-        subject: 'Instrucciones de Confirmación'
+        subject: 'Bienvenido a Cursa.me'
       reset_password_instructions:
         subject: 'Instrucciones para reiniciar tu contraseña'
       unlock_instructions:
