fixed copys on mails

--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -49,8 +49,8 @@ es:
       failure: 'No te pudimos autorizar en %{kind} debido a "%{reason}".'
     mailer:
       confirmation_instructions:
-        subject: 'Instrucciones de Confirmación'
+        subject: '¡Bienvenido a Cúrsame!'
       reset_password_instructions:
-        subject: 'Instrucciones para reiniciar tu contraseña'
+        subject: 'Instrucciones para reestablecer tu contraseña'
       unlock_instructions:
         subject: 'Instrucciones para desbloquear'
