--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -362,6 +362,7 @@ es:
     show_survey: Ver cuestionario
     show_survey_reply: Ver respuestas
     show_comment: Ver comentario
+    show_discussion: Ver discusión
     wants_to_participate_in_course: quiere participar en el curso
     has_delived_assignment: ha entregado la tarea
     has_answered_the_survey: ha contestado el cuestionario
@@ -374,6 +375,7 @@ es:
     assignment_updated: Se ha actualizado la tarea
     survey_added: Se ha creado el cuestionario
     has_posted_a_comment_on_comment: ha hecho un comentario en uno de tus comentarios
+    has_posted_a_comment_on_discussion: ha hecho un comentario en la discusión
     
     
   user_mailer:
