Bug fix: as a supervisor now I can see surveys from a course. Typo on translations

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -11,8 +11,8 @@ es:
     sign_in_btn: 'Iniciar Sesión'
     register_btn: 'Regístrate'
     register_slogun: '¡Regístrate, es gratis!'
-    register_student: 'Regístro de Estudiantes'
-    register_teacher: 'Regístro de Maestros'
+    register_student: 'Registro de Estudiantes'
+    register_teacher: 'Registro de Maestros'
     email_confirmation_text: 'Se enviará un mail de confirmación'
     remember_me: 'Recuerdame'
     lost_password_text: '¿Olvidaste tu contraseña?'
