as supervisor i can change the role of a teacher or student

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -341,9 +341,16 @@ es:
       teachers:
         approve: Aceptar
         reject: Rechazar
+        teacher: Maestro
+        student: Estudiante
+        update: Actualizar
     pending_approvals:
       approve: Aceptar
       reject: Rechazar
+    students:
+      student: Estudiante
+      teacher: Maestro
+      update: Actualizar
 
   views:
     pagination:
