As a supervisor export students and teachers in CSVs

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -359,6 +359,7 @@ es:
       change_role: Cambiar rol
       destroy: Eliminar
       registered_students: Estudiantes inscritos
+    export_csv: "Exportar CSV"
 
   views:
     pagination:
