create new user from supervisor

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -338,6 +338,7 @@ es:
         students: Estudiantes
         reports: 'Reportes'
         pending_approvals: Registros de maestros pendientes
+        new_user: Nuevo usuario
         configuration: Configuración
       teachers:
         approve: Aceptar
