as an admin I can create new admins

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -337,6 +337,7 @@ es:
         courses: Cursos
         teachers: Maestros
         students: Estudiantes
+        supervisors: Administradores
         reports: 'Reportes'
         pending_approvals: Registros de maestros pendientes
         new_user: Nuevo usuario
@@ -346,6 +347,7 @@ es:
         reject: Rechazar
         teacher: Maestro
         student: Estudiante
+        supervisor: Administrador
         update: Actualizar
         change_role: Cambiar rol
         destroy: Eliminar
@@ -357,10 +359,20 @@ es:
     students:
       student: Estudiante
       teacher: Maestro
+      supervisor: Administrador
       update: Actualizar
       change_role: Cambiar rol
       destroy: Eliminar
       registered_students: Estudiantes inscritos
+    supervisors:
+      singular_supervisor: Administrador
+      plural_supervisor: Administradores
+      update: Actualizar
+      change_role: Cambiar rol
+      destroy: Eliminar
+      teacher: Maestro
+      student: Estudiante
+      supervisor: Administrador
     export_students: "Exportar estudiantes"
     import_students: "Importar estudiantes"
     export_teachers: "Exportar maestros"
