as supervisor I can activate or deactivate the public registration

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -100,6 +100,7 @@ es:
         slogan: Frase corta
         welcome_message: Mensaje de bienvenida
         time_zone: Zona horaria
+        public_registry: '¿Registro público?'
       delivery:
         content: Contenido
       question:
