--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -191,11 +191,15 @@ es:
       accept: 'Aceptar'
       reject: 'Rechazar'
       remove: 'Quitar del curso'
+      role: 'Rol'
+      student: 'Estudiante'
+      teacher: 'Maestro'
     requests: &requests
       requests: 'Solicitudes'
       pending_requests: 'Solicitudes Pendientes'
     course:
-      request_join: Solicitar unirse
+      request_join_student: Solicitar unirse
+      request_join_teacher: Ser maestro del curso
       request_join_again: Solicitar unirse de nuevo
       join_requested: Solicitud pendiente
       join_rejected: Solicitud rechazada
