Platform statistics for super admin

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -5,6 +5,29 @@ es:
       networks: 'Redes'
       existing_networks: 'Redes actuales'
       statistics: 'Estadísticas'
+      platform_statistics: 'Estadísticas de la plataforma'
+    statistics: 
+      networks_users: 'Redes - usuarios'
+      courses: 'Cursos'
+      comments: 'Comentarios'
+      data: 'Dato'
+      registry: 'Registro'
+      total_networks: 'Total de redes'
+      total_users: 'Total de usuarios'
+      total_supervisors: 'Supervisores de red'
+      total_teachers: 'Maestros'
+      total_students: 'Estudiantes'
+      total_courses: 'Total de cursos'
+      total_open_courses: 'Cursos públicos'
+      total_private_courses: 'Cursos privados'
+      total_assignments: 'Total de tareas'
+      total_surveys: 'Total de cuestionarios'
+      total_discussions: 'Total de discusiones'
+      total_comments: 'Total de comentarios'
+      total_comments_assignments: 'Comentarios en tareas'
+      total_comments_discussions: 'Comentarios en discusiones'
+      total_comments_user_walls: 'En muro de usuarios'
+      total_comments_course_walls: 'En muro de cursos'
 
 
   confirm_delete: ¿Estas Seguro?
