--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -473,8 +473,10 @@ es:
       subject: Bienvenido a Cúrsame
       
   teacher_mailer:
-    pending_student_on_course:
-      subject: Un alumno ha solicitado acceso a uno de tus cursos
+    pending_user_on_course:
+      subject: Un usuario ha solicitado acceso a uno de tus cursos
+      teacher: maestro
+      student: alumno
       
   supervisor_mailer:
     new_teacher_registered:
