partial that shows the members of the network on the dashboard

--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -510,3 +510,7 @@ es:
   user:
     errors:
       email_not_allowed: Dirección de correo no permitida
+      
+  home:
+    members:
+      members: Miembros de la red
