--- a/config/locales/cursame.es.yml
+++ b/config/locales/cursame.es.yml
@@ -268,6 +268,7 @@ es:
     index:
       current: Actuales
       previous: Pasadas
+      unpublished: No publicadas
 
   surveys:
     survey:
@@ -285,6 +286,7 @@ es:
       new_survey: Nuevo cuestionario
       current: Actuales
       previous: Pasados
+      unpublished: No publicados
     show:
       header: Cuestionario 
       edit_survey: Editar
